--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "react-learning-english-app",
   "version": "0.1.0",
+  "proxy": "https://react-learning-english-app.firebaseio.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
