added some component: Profile, Results, About, else...

--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "proxy": "https://react-learning-english-app.firebaseio.com",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
     "compose": "^0.1.2",
     "firebase": "^8.0.1",
     "formik": "^2.2.1",
@@ -20,6 +24,7 @@
     "react-redux-firebase": "^3.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-slick": "^0.27.13",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
